# garbage-code-hunter

./: .gitignore  Cargo.toml  FEATURE_ROADMAP.md  LICENSE  Makefile  README.md  func.rs
benches/: performance_tests.rs
coverage/: tarpaulin-report.html
example/: ultimate_garbage_code_example.rs
src/: analyzer.rs  educational.rs  hall_of_shame.rs  i18n.rs  lib.rs  main.rs  reporter.rs  scoring.rs  utils.rs
src/rules/: advanced_rust.rs  code_smells.rs  complexity.rs  comprehensive_rust.rs  duplication.rs  file_structure.rs  garbage_naming.rs  mod.rs  naming.rs  rust_patterns.rs  rust_specific.rs  student_code.rs
tests/: cli_tests.rs  coverage_tests.rs  edge_cases.rs  integration_tests.rs  reporter_tests.rs  unit_tests.rs
