[package]
authors = [ "TimWood <jinhopers@gmail.com>" ]
name = "garbage-code-hunter"
version = "0.1.0"
edition = "2021"
description = "A humorous Rust code quality detector that roasts your garbage code"
repository = "https://github.com/TimWood/garbage-code-hunter"
license = "MIT"


[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit"] }
quote = "1.0"
walkdir = "2.0"
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.7"

[[bench]]
name = "performance_tests"
harness = false
